--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -6,30 +8,25 @@
 }
 
 body {
-  font-family: sans-serif;
+  font-family: Righteous, sans-serif;
   background-color: #303030;
   color: rgb(27, 27, 27);
 }
 
+.container {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .boxout {
-  border: 10px;
   background-color: aqua;
   border-radius: 15px;
   padding: 15px;
 }
 
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  min-height: 100vh;
-  width: 100vw;
-  height: 100vw;
-}
-
 #joke {
-  width: 100%;
   font-size: 2rem;
-  align-content: center;
+  text-align: center;
 }
